fix: editor toolbar alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,3 +67,14 @@ body {
 .w-md-editor-fullscreen {
   height: 100% !important;
 }
+
+// Media queries
+
+@media screen and (max-width: 450px) {
+  .w-md-editor-toolbar {
+    height: 50px !important;
+  }
+  .w-md-editor-content {
+    height: calc(100% - 50px) !important;
+  }
+}
